Return Page instead of List. View financial_report.html. Add transactionResponse Type.
View List Goal with Status != CANCELLED