@@ -6,9 +6,13 @@ import lombok.experimental.FieldDefaults;
 import lombok.extern.slf4j.Slf4j;
 import org.codewith3h.finmateapplication.dto.request.CreateGoalContributionRequest;
 import org.codewith3h.finmateapplication.dto.response.GoalContributionResponse;
+import org.codewith3h.finmateapplication.dto.response.GoalProgressResponse;
 import org.codewith3h.finmateapplication.entity.GoalContribution;
 import org.codewith3h.finmateapplication.mapper.GoalContributionMapper;
 import org.codewith3h.finmateapplication.repository.GoalContributionRepository;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
@@ -22,8 +26,12 @@ public class GoalContributionService {
     GoalContributionRepository goalContributionRepository;
     GoalContributionMapper goalContributionMapper;
 
-    public List<GoalContributionResponse> getContributionsByGoalId(int goalId) {
-        return goalContributionRepository.findGoalContributionsByGoal_Id(goalId).stream().map(goalContributionMapper::toGoalContributionResponse).collect(Collectors.toList());
+    public Page<GoalContributionResponse> getContributionsByGoalId(int goalId, Pageable pageable) {
+        Page<GoalContribution> goalContributionsPage = goalContributionRepository.findGoalContributionsByGoal_Id(goalId, pageable);
+
+        List<GoalContributionResponse> responses = goalContributionsPage.getContent().stream().map(goalContributionMapper::toGoalContributionResponse).toList();
+
+        return new PageImpl<>(responses, pageable, goalContributionsPage.getTotalElements());
     }
 
     public GoalContributionResponse createGoalContribution(CreateGoalContributionRequest request) {
